# stm32L4R5ZI

./: Cargo.toml  readme.md
.cargo/: config.toml
New folder/stm32h750vb-embassy-examples-main/: Cargo.toml
src/: main.rs  motion.rs  serial.rs  st7735.rs  sys.rs  usart_blok.rs
