[package]
edition = "2021"
name = "embassy-stm32l4-examples"
version = "0.1.1"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32l4s5vi to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0",  features = [ 
    "defmt", "unstable-pac", "stm32l4r5zi", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.6.0",features = ["defmt"] }
embassy-executor = { version = "0.7.0",  features = [
    "task-arena-size-65536", 
    "arch-cortex-m",
     "executor-thread",
       "executor-interrupt",
      "defmt", 
 ] }

embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embassy-time = { version = "0.4",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", ] }
embassy-embedded-hal = { version = "0.3.0" }
embassy-usb = { version = "0.3.0",  features = ["defmt"] }

embassy-futures = { version = "0.1.0"  }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"] }


cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
chrono = { version = "^0.4", default-features = false }
rand = { version = "0.8.5", default-features = false }
static_cell = "2"

micromath = "2.0.0"

# stepper = "0.6.0"
defmt = "0.3.10"
defmt-rtt= "0.4"

embedded-graphics = "0.8.1"
st7735-embassy = { git = "https://github.com/kalkyl/st7735-embassy" }
tinybmp = "0.6.0"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
edrv-st7735 = "0.0.1"

[profile.release]
debug = 2
